Refactor index.html structure and update title
Updated the title and added viewport meta tag. Refactored the body structure to include a main container and improved image alt text.

--- a/index.html
+++ b/index.html
@@ -2,16 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>gyoneyot</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Toyen</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Welcome to my domain 👋</h1>
-  
-  <!-- Image below heading -->
-  <img src="ss_1.jpeg" alt="text exchange">
-  
-  <!-- Calendly link -->
-  <p>Book a meeting here: <a href="https://calendly.com/dattebayohunter" target="_blank">Calendly</a></p>
+  <main class="container">
+    <h1>Welcome to my domain 👋</h1>
+
+    <img src="ss_1.jpeg" alt="Text exchange screenshot" loading="lazy">
+
+    <p>
+      Book a meeting here:
+      <a href="https://calendly.com/dattebayohunter"
+         target="_blank"
+         rel="noopener noreferrer">
+        Calendly
+      </a>
+    </p>
+  </main>
 </body>
 </html>
