--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <section class="convention-history">
       <h2>Convention History</h2>
       <ul>
-        <li><strong>VidCon</strong> - 2024</li>
-        <li><strong>AX2024</strong></li>
-        <li><strong>Anime Impulse</strong></li>
+        <li><span class="event">JoJo Meetup</span><span class="year">2026</span></li>
+        <li><span class="event">Anime Expo</span><span class="year">2025</span></li>
+        <li><span class="event">Anime Expo</span><span class="year">2024</span></li>
       </ul>
     </section>
   </main>
