--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
           <li>LVMKT</li>
           <li>MSCHF Art 2</li>
           <li>1214 Entertainment YAR</li>
-          <li>Eanime</li>
-          <li>OffKai Expo</li>
+          <li>Fanime</li>
+          <li>OffKai Expo Gen 3</li>
           <li>VidCon</li>
           <li>Anime Expo</li>
           <li>OTV Comfy Cafe</li>
@@ -62,8 +62,8 @@
         <ul>
           <li>Airrack’s 10M Pizza Party</li>
           <li>Scribble After Dark</li>
-          <li>LVL UP EXPO</li>
-          <li>Kelvin Con xD</li>
+          <li>LVL UP Expo</li>
+          <li>Kelvin Con</li>
           <li>AniFest</li>
           <li>Yes Theory Beach Cleanup</li>
           <li>Anime Expo</li>
