--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="event-history">
       <h2>Event History</h2>
 
-      <details open class="year-block">
+      <details class="year-block">
         <summary>2025</summary>
         <ul>
           <li>Touched Grass</li>
