--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <main class="container">
     <h1>Welcome to my domain 👋</h1>
 
+    <!-- HERO = top section (image + booking). Not that I'm a hero -->
     <section class="hero">
       <img
         src="ss_1.jpeg"
@@ -31,18 +32,42 @@
       </p>
     </section>
 
+    <!-- ADVENTURE LOG -->
     <section class="event-history">
-      <h2>Event History</h2>
+      <h2>Adventure Log</h2>
+      <p class="section-subtitle">Highlights by year — click to expand.</p>
 
+      <!-- CURRENT ARC -->
+      <section class="current-arc" aria-label="Current arc">
+        <h3>Current Arc</h3>
+        <p class="current-arc-subtitle">
+          Showing up, building momentum, and saying yes more often.
+        </p>
+
+        <ul class="current-arc-list">
+          <li>🎭 Cosplay & meetups</li>
+          <li>🧭 More events, less hesitation</li>
+          <li>🛠️ Personal projects & site upgrades</li>
+        </ul>
+      </section>
+
+      <!-- 2025 -->
       <details class="year-block">
-        <summary>2025</summary>
+        <summary>
+          <span class="year-title">2025</span>
+          <span class="year-subtitle">Touching grass arc</span>
+        </summary>
         <ul>
           <li>Touched Grass</li>
         </ul>
       </details>
 
+      <!-- 2024 -->
       <details class="year-block">
-        <summary>2024</summary>
+        <summary>
+          <span class="year-title">2024</span>
+          <span class="year-subtitle">Peak convention run</span>
+        </summary>
         <ul>
           <li>Anime Los Angeles</li>
           <li>LVMKT</li>
@@ -57,8 +82,12 @@
         </ul>
       </details>
 
+      <!-- 2023 -->
       <details class="year-block">
-        <summary>2023</summary>
+        <summary>
+          <span class="year-title">2023</span>
+          <span class="year-subtitle">Chaos & core memories</span>
+        </summary>
         <ul>
           <li>Airrack’s 10M Pizza Party</li>
           <li>Scribble After Dark</li>
@@ -74,8 +103,12 @@
         </ul>
       </details>
 
+      <!-- 2022 -->
       <details class="year-block">
-        <summary>2022</summary>
+        <summary>
+          <span class="year-title">2022</span>
+          <span class="year-subtitle">Origin story</span>
+        </summary>
         <ul>
           <li>Creator Clash</li>
           <li>Fanime</li>
@@ -84,6 +117,7 @@
           <li>Mogul Chessboxing Championship</li>
         </ul>
       </details>
+
     </section>
   </main>
 </body>
